# quadperf

./: .gitmodules  CMakeLists.txt  basic_quad.h  main.cpp  mt_bl_uv.inl  opt.h  pluecker.inl  project2d.inl  snex.h  swoop.h  util.inl  uv.inl
